css/styles.css
body {
    font-family: "Libre Baskerville", serif;
    background-image: url(../images/floral-bg.jpg);
}

main {
    margin: 0 auto;
    max-width: 80dvw;
    height: 80dvh;
    background-color: #fff;
    border-radius: 1rem;
}

.selection {
    text-align: center;
    margin-top: 5rem;
    padding-top: 2.5rem;
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding-top: 1rem;
}

.side-container {
    display: flex;
    flex-direction: column;
    margin-left: 1rem;
}

.img-container {
    margin-bottom: 1rem;
    width: 250px;
    height: 250px;
    border-radius: 5px;
    overflow: hidden;
}

.img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/** hide img before search **/
.hidden{
    display: none;
}

